# Exo-Detector

./: README.md  contourpy-1.3.2-cp312-cp312-win_amd64.whl  fonttools-4.58.0-cp312-cp312-win_amd64.whl  pyproject.toml  requirements-gpu.txt  requirements.txt
dashboard/: app.py  config.toml  run_dashboard.sh
dashboard/assets/: style.css
data/: anomaly_detection_pipeline_results.txt  gan_pipeline_results.txt  ingestion_summary.txt  preprocessing_summary.txt  window_extraction_summary.txt
data/candidates/: candidate_catalog.csv  candidate_results.json
data/catalogs/: confirmed_planets.csv  tic_targets.csv  toi_catalog.csv  transit_parameters.csv
data/gan_output/: discriminator_epoch_10.pth  discriminator_epoch_100.pth  discriminator_epoch_20.pth  discriminator_epoch_30.pth  discriminator_epoch_40.pth  discriminator_epoch_50.pth  discriminator_epoch_60.pth  discriminator_epoch_70.pth  discriminator_epoch_80.pth  discriminator_epoch_90.pth  generator_epoch_10.pth  generator_epoch_100.pth  generator_epoch_20.pth  generator_epoch_30.pth  generator_epoch_40.pth  generator_epoch_50.pth  generator_epoch_60.pth  (+1003 more)
docker/: Dockerfile.cpu  Dockerfile.gpu  run.sh
src/: active_learning.py  advanced_augmentation.py  anomaly_detection.py  anomaly_detection_validation.py  app.py  bayesian_ranking.py  candidate_ranking.py  candidate_ranking_validation.py  data_ingestion.py  data_preprocessing.py  data_validation.py  gan_module.py  gan_validation.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  transfer_learning.py  transformer_anomaly_detection.py
(+682 files in other folders)
