[tool.poetry]
name = "exo-detector"
version = "0.1.0"
description = "Exoplanet detection project"
authors = ["Rehan <rehan@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"

# Core libraries
numpy = "1.26.4"
pandas = "2.2.3"
scipy = "^1.11.0"
matplotlib = "3.7.1"
seaborn = "0.12.2"
plotly = "5.15.0"


# Astronomy
astropy = "^6.0"
lightkurve = "2.4.0"
astroquery = "0.4.6"

# ML & PyTorch
scikit-learn = "^1.3"
torch = "2.2.2"
torchvision = "0.17.2"
torchaudio = "2.2.2"

# UI
streamlit = "1.22.0"
altair = "<5"  # Compatible with streamlit

# Utilities
tqdm = "4.65.0"
joblib = "1.2.0"
ipython = "^8.18.1"
jupyter = "1.0.0"
pytest = "^7.4"
pillow = ">=10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
